--- a/templates/index.html
+++ b/templates/index.html
@@ -371,7 +371,7 @@
 
                             <!-- Text -->
                             <p class="card-text">{{ first_object.content|slice:":200" }}</p>
-                            <button class="btn peach-gradient btn-rounded"><a href="{% url 'post_detail' first_object.slug  %}"></a>بیشتر بخوانید &rarr;</button>
+                            <button class="btn peach-gradient btn-rounded"><a href="{% url 'post_detail' first_object.slug  %}">بیشتر بخوانید &rarr;</a> </button>
                             {% endwith %}
 
 
