--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -239,9 +239,10 @@
   <div class="row">
     <div class="col-md-8 card mb-4  mt-3 left  top">
       <div class="card-body">
-        <h1>{% block title %} {{ object.title }} {% endblock title %}</h1>
+          
+        <h1> {{ post.title }}  </h1>
         <p class=" text-muted">{{ post.author }}</p>
-        <p class="card-text ">{{ object.content | safe }}</p>
+        <p class="card-text ">{{post.content | safe }}</p>
       </div>
     </div>
   </div>
