:bug: fixed bug on

--- a/templates/index.html
+++ b/templates/index.html
@@ -365,7 +365,7 @@
 
                         </div>
                         <div class="card-body card-body-cascade text-center">
-                            {% with postlist|first as first_object %}
+                            {% with post_list|first as first_object %}
                             <!-- Title -->
                             <h4 class="card-title"><strong>{{ first_object.title }}</strong></h4>
                             <!-- Subtitle -->
