--- a/templates/about_en.html
+++ b/templates/about_en.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <!--  Required meta tags always come first  -->
-    <link href="static/css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="static/css/mdb.css" rel="stylesheet" type="text/css">
-    <link href="static/css/all.css" rel="stylesheet" type="text/css">
-    <link href="static/css/custom.css" rel="stylesheet" type="text/css">
+        {% load static %}
+
+        <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css">
+    <!-- Material Design for Bootstrap -->
+        <link href="{% static 'css/mdb.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'css/all.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static  'css/custom.css' %}" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <!-- Custom styles -->
     <style>
@@ -116,7 +119,7 @@
         <nav class="navbar  navbar-expand-lg navbar-dark stylish-color-dark fixed-top scrolling-navbar">
 
 
-            <a class="navbar-brand order-md-first" href="index.html">Giresh</a>
+            <a class="navbar-brand order-md-first" href="/indexen">Giresh</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -124,7 +127,7 @@
 
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html" ><i class="fas fa-info-circle"></i>About Us</a>
+                        <a class="nav-link" href="/abouten" ><i class="fas fa-info-circle"></i>About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" data-toggle="modal" data-target="#modalContactForm"><i class="fas fa-address-book"></i>Contact Us</a>
@@ -141,14 +144,14 @@
 
 
             </div>
-            <a  type="button" class="btn btn-email" href="../index.html"   >
+            <a  type="button" class="btn btn-email" href="/"   >
                 <i class="fas fa-globe" > FA</i>
             </a>
         </nav>
 
 
         <!-- Intro Section -->
-        <div id="home" class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url(static/img/s.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
+        <div id="home" class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url({% static 'img/s.jpg' %});; background-repeat: no-repeat; background-size: cover; background-position: center center;">
           <div class="mask rgba-stylish-light">
             <div class="container h-100 d-flex justify-content-center align-items-center">
                 <div class="row pt-5 mt-3">
@@ -180,13 +183,13 @@
                 <!-- Section description -->
                 <p class="text-center grey-text mb-5 mx-auto w-responsive">Giresh company started its journey 1990 and with less than 1000$ dollars to produce Paint colours for constuction and related items and importing chemical components of Painting.
                     After compeleting this step company started Parskimia independent company and its manufacturing part completely focused on producing art related components..</p>
-                <img class="img-fluid " src="static/img/unnamed.jpg" alt="">
+                <img class="img-fluid " src="url({% static 'img/unnamed.jpg' %})" alt="">
                 <hr class="my-5">
                 <!-- Grid row -->
                 <h2 class="font-weight-bold text-center h1 my-5"><i class="fas fa-trophy" style="color:gold"></i>Honors</h2>
                 <!-- Section description -->
                 <p class="text-center grey-text mb-5 mx-auto w-responsive">We have more than 80% of marketshare and our products can be bought anywhere in our dear country as students or anyone willing to create art and this also helped country economy to stop redundant export of currency and this is our greatest honor and in standardization of gouaches we were trying and doing R&D and currently first in this field in our country</p>
-                <img class="img-fluid " src="static/img/unnamed.jpg" alt="">
+                <img class="img-fluid " src="url({% static 'img/s.jpg' %})" alt="">
                                 <!-- Grid row -->
 
                 <!-- Grid row -->
