--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
-    <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="../static/css/mdb.css" rel="stylesheet" type="text/css">
-    <link href="../static/css/all.css" rel="stylesheet" type="text/css">
-    <link href="../static/css/custom.css" rel="stylesheet" type="text/css">
+        {% load static %}
+
+        <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css">
+    <!-- Material Design for Bootstrap -->
+        <link href="{% static 'css/mdb.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'css/all.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static  'css/custom.css' %}" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <title>گیرش</title>
 </head>
 <body style="font-family: 'Vazir FD' "  >
-<script src="../static/js/jquery-3.4.1.min.js"></script>
-<script src="../static/js/popper.min.js"></script>
-<script src="../static/js/bootstrap.js"></script>
-<script src="../static/js/mdb.js"></script>
-<script src="../static/js/represent.js"></script>
+    <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/mdb.js' %}"></script>
 <style>
 
     /* Navigation*/
@@ -204,14 +206,14 @@
             <ul class="navbar-nav  ml-auto">
 
                 <li>
-                    <a class="navbar-brand order-md-last" href="../index.html">گیرش</a>
+                    <a class="navbar-brand order-md-last" href="/">گیرش</a>
                 </li>
 
                 <!--                    <li class="nav-item">-->
                 <!--                        <a class="nav-link" href="#">قوانین<i class="fas fa-tasks"></i></a>-->
                 <!--                    </li>-->
                 <li class="nav-item">
-                    <a class="nav-link mr-4" href="../about.html" >درباره ما<i class="fas fa-info-circle"></i></a>
+                    <a class="nav-link mr-4" href="/about" >درباره ما<i class="fas fa-info-circle"></i></a>
                 </li>
 
 
@@ -256,10 +258,10 @@
         <section class="d-flex justify-content-center " >
             <div   style="width: 50% ; margin-top: 5% ; margin-bottom: 5%">
 
-                <a  target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="../static/img/IMG_0154.JPG"></a>
+                <a  target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="url({% static 'img/IMG_0154.JPG' %})"></a>
             <hr>
             <hr>
-                <a  target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="../static/img/IMG_0153.JPG"></a>
+                <a  target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="url({% static 'img/IMG_0153.JPG' %})"></a>
 
 
 
@@ -318,7 +320,7 @@
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3" style="text-align:right;float:right">
                 <h6 class="text-uppercase mb-4 font-weight-bold">لینک‌های مفید</h6>
                 <p>
-                    <a href="../Representation.html">نمایندگی ها</a>
+                    <a href="/representation">نمایندگی ها</a>
                 </p>
                 <p>
                     <a href="#!" data-toggle="modal" data-target="#modalContactForm">تماس با پشتیبانی</a>
