--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,6 @@
         <link href="{% static 'css/mdb.css' %}" rel="stylesheet" type="text/css">
         <link href="{% static 'css/all.css' %}" rel="stylesheet" type="text/css">
         <link href="{% static  'css/custom.css' %}" rel="stylesheet" type="text/css">
-        <link href="{% static  'css/custom.css' %}" rel="stylesheet" type="text/css">
      <!-- jQuery -->
     
         <meta charset="UTF-8">
@@ -59,19 +58,19 @@
         height: 100%;
     }
     .carousel-item:nth-child(1) {
-        background-image: url(static/img/2.jpg);
+        background-image: url({% static 'img/2.jpg' %});
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
     }
     .carousel-item:nth-child(2) {
-        background-image: url(static/img/3.jpg);
+        background-image: url({% static 'img/3.jpg' %});
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
     }
     .carousel-item:nth-child(3) {
-        background-image: url(static/img/s.jpg);
+        background-image: url({% static 'img/s.jpg' %});
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
@@ -227,7 +226,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link mr-4" href="about.html" >درباره ما<i class="fas fa-info-circle"></i></a>
+                <a class="nav-link mr-4" href="/about" >درباره ما<i class="fas fa-info-circle"></i></a>
             </li>
 
             <li class="nav-item">
@@ -296,7 +295,7 @@
                             <h2 class="font-weight-bold text-uppercase py-4">پیشرو در کیفیت</h2>
                         </li>
                         <li>
-                            <a target="_blank" href="page/govash.html" class="btn btn-primary btn-rounded btn-lg">مشاهده محصولات</a>
+                            <a target="_blank" href="/govash" class="btn btn-primary btn-rounded btn-lg">مشاهده محصولات</a>
                         </li>
                     </ul>
                 </div>
@@ -357,7 +356,7 @@
 
                         <!-- Card image -->
                         <div class="view view-cascade overlay" style="height: 550px; " >
-                            <img class="card-img-top" src="static/img/new_year.jpeg" alt="Card image cap">
+                            <img class="card-img-top" src="url({% static 'img/new_year.jpeg' %})" alt="Card image cap">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -397,7 +396,7 @@
 
                         <!-- Card image -->
                         <div class="view view-cascade overlay" style="height: 550px">
-                            <img class="card-img-top" src="static/img/s.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="url({% static 'img/s.jpg' %})" alt="Card image cap">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -413,7 +412,7 @@
                             <!-- Text -->
                             <p class="card-text">دارای بهترین کیفیت </p>
 
-                            <a href="./page/govash.html" class="btn purple-gradient btn-rounded">مشاهده محصول</a>
+                            <a href="/govash" class="btn purple-gradient btn-rounded">مشاهده محصول</a>
 
 
 
@@ -431,7 +430,7 @@
 
                         <!-- Card image -->
                         <div class="view view-cascade overlay "   >
-                            <img    class="card-img-top "  src="static/img/unnamed.jpg" alt="Card image cap">
+                            <img    class="card-img-top "  src="url({% static 'img/unnamed.jpg' %})" alt="Card image cap">
                             <a href="#!" >
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -448,7 +447,7 @@
                             <!-- Subtitle -->
 
                             <!-- Text -->
-                            <a href="page/acleryc.html" class="btn blue-gradient btn-rounded ">مشاهده محصول</a>
+                            <a href="/acleryc" class="btn blue-gradient btn-rounded ">مشاهده محصول</a>
 
 
 
@@ -465,7 +464,7 @@
             </div>
                 <div class="container" style="margin-top:5%  ; margin-bottom: 5%">
                     <!-- Jumbotron -->
-                    <div class="card card-image z-depth-5  rounded" style="background-image: url(static/img/2.jpg);">
+                    <div class="card card-image z-depth-5  rounded" style="background-image: url({% static 'img/2.jpg' %});;">
                         <div class="text-white text-center rgba-stylish-strong py-5 px-4">
                             <div class="py-5">
 
@@ -473,7 +472,7 @@
                                 <h5 class="h5 orange-text"><i class="fas fa-paint-brush"></i> رنگ پارس</h5>
                                 <h2 class="card-title h2 my-4 py-2">در رنگ های متنوع</h2>
                                 <p class="mb-4 pb-2 px-md-5 mx-md-5">با تجربه ی چندین ساله در زمینه ی تولید رنگ های نقاشی</p>
-                                <a href="page/catalog.html" class="btn peach-gradient btn-rounded "><i class="fas fa-shopping-basket left"></i> مشاهده کاتالوگ</a>
+                                <a href="/catalog" class="btn peach-gradient btn-rounded "><i class="fas fa-shopping-basket left"></i> مشاهده کاتالوگ</a>
 
                             </div>
                         </div>
@@ -529,7 +528,7 @@
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3" style="text-align:right;float:right">
                 <h6 class="text-uppercase mb-4 font-weight-bold">لینک‌های مفید</h6>
                 <p>
-                    <a href="Representation.html">نمایندگی ها</a>
+                    <a href="/representation">نمایندگی ها</a>
                 </p>
                 <p>
                     <a href="#!" data-toggle="modal" data-target="#modalContactForm">تماس با پشتیبانی</a>
