--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-    <link href="static/css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="static/css/mdb.css" rel="stylesheet" type="text/css">
-    <link href="static/css/all.css" rel="stylesheet" type="text/css">
-    <link href="static/css/custom.css" rel="stylesheet" type="text/css">
+        {% load static %}
+
+        <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css">
+    <!-- Material Design for Bootstrap -->
+        <link href="{% static 'css/mdb.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'css/all.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static  'css/custom.css' %}" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <title>Giresh</title>
 </head>
 <body style=""  >
-<script src="static/js/jquery-3.4.1.min.js"></script>
-<script src="static/js/popper.min.js"></script>
-<script src="static/js/bootstrap.js"></script>
-<script src="static/js/mdb.js"></script>
+    <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/mdb.js' %}"></script>
 <style>
 
     /* Navigation*/
@@ -52,19 +55,19 @@
         height: 100%;
     }
     .carousel-item:nth-child(1) {
-        background-image: url(static/img/2.jpg);
+        background-image: url({% static 'img/2.jpg' %});
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
     }
     .carousel-item:nth-child(2) {
-        background-image: url(static/img/3.jpg);
+        background-image: url({% static 'img/3.jpg' %});
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
     }
     .carousel-item:nth-child(3) {
-        background-image: url(static/img/s.jpg);
+        background-image: url({% static 'img/s.jpg' %});
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
@@ -82,7 +85,7 @@
 
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="about.html" ><i class="fas fa-info-circle"></i>About Us</a>
+                <a class="nav-link" href="/about" ><i class="fas fa-info-circle"></i>About Us</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="modal" data-target="#modalContactForm"><i class="fas fa-address-book"></i>Contact Us</a>
@@ -99,7 +102,7 @@
 
 
     </div>
-    <a  type="button" class="btn btn-email" href="../index.html"   >
+    <a  type="button" class="btn btn-email" href="/"   >
         <i class="fas fa-globe" > FA</i>
     </a>
 </nav>
@@ -199,7 +202,7 @@
                             <p class="font-weight-bold text-uppercase py-4" style="color:#007E33">Best of best gathered here</p>
                         </li>
                         <li>
-                            <a target="_blank" href="https://mdbootstrap.com/bootstrap-tutorial/" class="btn btn-primary btn-rounded btn-lg">مشاهده محصولات</a>
+                            <a target="_blank" href="#" class="btn btn-primary btn-rounded btn-lg">مشاهده محصولات</a>
                         </li>
                     </ul>
                 </div>
@@ -258,7 +261,7 @@
 
                         <!-- Card image -->
                         <div class="view view-cascade overlay">
-                            <img class="card-img-top" src="static/img/s.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="url({% static 'img/s.jpg' %})" alt="Card image cap">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -292,7 +295,7 @@
 
                         <!-- Card image -->
                         <div class="view view-cascade overlay " >
-                            <img class="card-img-top"  src="static/img/s.jpg" alt="Card image cap">
+                            <img class="card-img-top"  src="url({% static 'img/s.jpg' %})" alt="Card image cap">
                             <a href="#!" >
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -326,7 +329,7 @@
 
                         <!-- Card image -->
                         <div class="view view-cascade overlay">
-                            <img class="card-img-top" src="static/img/s.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="url({% static 'img/s.jpg' %})" alt="Card image cap">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -355,7 +358,7 @@
             </div>
                 <div class="container" style="margin-top:5%  ; margin-bottom: 5%">
                     <!-- Jumbotron -->
-                    <div class="card card-image" style="background-image: url(static/img/2.jpg);">
+                    <div class="card card-image" style="background-image: url({% static 'img/2.jpg' %});">
                         <div class="text-white text-center rgba-stylish-strong py-5 px-4">
                             <div class="py-5">
 
