--- a/templates/about_en.html
+++ b/templates/about_en.html
@@ -183,13 +183,13 @@
                 <!-- Section description -->
                 <p class="text-center grey-text mb-5 mx-auto w-responsive">Giresh company started its journey 1990 and with less than 1000$ dollars to produce Paint colours for constuction and related items and importing chemical components of Painting.
                     After compeleting this step company started Parskimia independent company and its manufacturing part completely focused on producing art related components..</p>
-                <img class="img-fluid " src="url({% static 'img/unnamed.jpg' %})" alt="">
+                <img class="img-fluid " src="{% static 'img/unnamed.jpg' %}" alt="">
                 <hr class="my-5">
                 <!-- Grid row -->
                 <h2 class="font-weight-bold text-center h1 my-5"><i class="fas fa-trophy" style="color:gold"></i>Honors</h2>
                 <!-- Section description -->
                 <p class="text-center grey-text mb-5 mx-auto w-responsive">We have more than 80% of marketshare and our products can be bought anywhere in our dear country as students or anyone willing to create art and this also helped country economy to stop redundant export of currency and this is our greatest honor and in standardization of gouaches we were trying and doing R&D and currently first in this field in our country</p>
-                <img class="img-fluid " src="url({% static 'img/s.jpg' %})" alt="">
+                <img class="img-fluid " src="{% static 'img/s.jpg' %}" alt="">
                                 <!-- Grid row -->
 
                 <!-- Grid row -->
