--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -232,7 +232,7 @@
     </nav>
 
     <!-- Intro Section -->
-    <div id="home" class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url(../static/img/s.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
+    <div id="home" class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url({% static 'img/s.jpg' %}); background-repeat: no-repeat; background-size: cover; background-position: center center;">
         <div class="mask rgba-stylish-light">
             <div class="container h-100 d-flex justify-content-center align-items-center">
                 <div class="row pt-5 mt-3">
@@ -258,10 +258,10 @@
         <section class="d-flex justify-content-center " >
             <div   style="width: 50% ; margin-top: 5% ; margin-bottom: 5%">
 
-                <a  target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="url({% static 'img/IMG_0154.JPG' %})"></a>
+                <a  target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_0154.JPG' %}"></a>
             <hr>
             <hr>
-                <a  target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="url({% static 'img/IMG_0153.JPG' %})"></a>
+                <a  target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_0153.JPG' %}"></a>
 
 
 
