--- a/templates/govash.html
+++ b/templates/govash.html
@@ -232,7 +232,7 @@
     </nav>
 
     <!-- Intro Section -->
-    <div id="home" class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url(../static/img/s.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
+    <div id="home" class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url({% static 'img/s.jpg' %});background-repeat: no-repeat; background-size: cover; background-position: center center;">
         <div class="mask rgba-stylish-light">
             <div class="container h-100 d-flex justify-content-center align-items-center">
                 <div class="row pt-5 mt-3">
@@ -271,7 +271,7 @@
                 ترکیب رنگها
                 قرمز و زرد و آبی سه رنگی اصلی می باشد از ترکیب این سه رنگ رنگهای فرعی : نارنجی ،سبز، بنفش و همه رنگها را می توان ساخت.
 </p>
-                <a href="url({% static 'img/IMG_0154.JPG' %})" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="url({% static 'img/IMG_0154.JPG' %})"></a>
+                <a href="{% static 'img/IMG_0154.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_0154.JPG' %}"></a>
 
 
 
