--- a/templates/index.html
+++ b/templates/index.html
@@ -356,7 +356,7 @@
 
                         <!-- Card image -->
                         <div class="view view-cascade overlay" style="height: 550px; " >
-                            <img class="card-img-top" src="url({% static 'img/new_year.jpeg' %})" alt="Card image cap">
+                            <img class="card-img-top" src="{% static 'img/new_year.jpeg' %}" alt="Card image cap">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -396,7 +396,7 @@
 
                         <!-- Card image -->
                         <div class="view view-cascade overlay" style="height: 550px">
-                            <img class="card-img-top" src="url({% static 'img/s.jpg' %})" alt="Card image cap">
+                            <img class="card-img-top" src="{% static 'img/s.jpg' %}" alt="Card image cap">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -430,7 +430,7 @@
 
                         <!-- Card image -->
                         <div class="view view-cascade overlay "   >
-                            <img    class="card-img-top "  src="url({% static 'img/unnamed.jpg' %})" alt="Card image cap">
+                            <img    class="card-img-top "  src="{% static 'img/unnamed.jpg' %}" alt="Card image cap">
                             <a href="#!" >
                                 <div class="mask rgba-white-slight"></div>
                             </a>
