--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -261,7 +261,7 @@
 
                         <!-- Card image -->
                         <div class="view view-cascade overlay">
-                            <img class="card-img-top" src="url({% static 'img/s.jpg' %})" alt="Card image cap">
+                            <img class="card-img-top" src="{% static 'img/s.jpg' %}" alt="Card image cap">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -295,7 +295,7 @@
 
                         <!-- Card image -->
                         <div class="view view-cascade overlay " >
-                            <img class="card-img-top"  src="url({% static 'img/s.jpg' %})" alt="Card image cap">
+                            <img class="card-img-top"  src="{% static 'img/s.jpg' %}" alt="Card image cap">
                             <a href="#!" >
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -329,7 +329,7 @@
 
                         <!-- Card image -->
                         <div class="view view-cascade overlay">
-                            <img class="card-img-top" src="url({% static 'img/s.jpg' %})" alt="Card image cap">
+                            <img class="card-img-top" src="{% static 'img/s.jpg' %}" alt="Card image cap">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
