edit about page

--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -85,7 +85,7 @@
 
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="/about" ><i class="fas fa-info-circle"></i>About Us</a>
+                <a class="nav-link" href="/abouten" ><i class="fas fa-info-circle"></i>About Us</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="modal" data-target="#modalContactForm"><i class="fas fa-address-book"></i>Contact Us</a>
