--- a/templates/index.html
+++ b/templates/index.html
@@ -363,7 +363,7 @@
 
                             <!-- Card image -->
                             <div class="view view-cascade overlay" style="height: 550px; ">
-                                <img class="card-img-top" src="{% static 'img/ramadan_farsi.jpeg' %}" alt="Card image cap">
+                                <img class="card-img-top" src="{% static 'img/ramadan_farsi.jpg' %}" alt="Card image cap">
                                 <a href="#!">
                                     <div class="mask rgba-white-slight"></div>
                                 </a>
