--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -263,30 +263,76 @@
 
                 <!--Section description-->
                 <p class="text-center font-up pb-5 mb-4 font-bold wow fadeIn" data-wow-delay="0.2s">View our services</p>
-                <div class="row text-center mb-2">
-                    <div class="col-lg-4 col-md-12 pb-1 wow fadeIn">
+                <div class="row text-center mb-2  px-3 ">
+
+
+                    <div class="col-lg-4 col-md-12 pb-5 wow fadeIn  ">
                         <!-- Card Wider -->
-                        <div class="card card-cascade">
+                        <div class="card card-cascade" style="max-height: 700px;max-width: 700px;">
 
                             <!-- Card image -->
-                            <div class="view view-cascade overlay">
-                                <img class="card-img-top" src="{% static 'img/ramadan.jpg' %}" alt="Card image cap">
-                                <a href="#!">
-                                    <div class="mask rgba-white-slight"></div>
+                            <div class="view view-cascade overlay ">
+                                <img class="card-img-top img-responsive " style="max-height: 100%;" src="{% static 'img/ramadan.jpg' %} " alt="Card image cap ">
+                                <a href="#! ">
+                                    <div class="mask rgba-white-slight "></div>
+                                </a>
+
+
+                            </div>
+                            <div class="card-body card-body-cascade text-center ">
+                                <h4 class="card-title "><strong>Ramadan Mubarak</strong></h4>
+                                <!-- Subtitle -->
+
+                                <!-- Text -->
+                                <p class="card-text font-weight-bold  "> Ramadan takes you on a spiritual journey </br> that ends right at the door of Allah </br>where dwells endless mercy and immeasurable happiness.</br> Ramadan Mubarak to you!</p>
+
+
+
+
+
+                            </div>
+
+
+
+                            <!-- Card content -->
+
+                        </div>
+
+                    </div>
+
+
+
+                    <div class="col-lg-4 col-md-12 pb-5 wow fadeIn ">
+                        <!-- Card Wider -->
+                        <div class="card card-cascade " style="max-height: 700px;max-width: 700px; ">
+
+                            <!-- Card image -->
+                            <div class="view view-cascade overlay ">
+                                <img class="card-img-top img-responsive " style="max-height: 100%; " src="{% static 'img/s.jpg' %} " alt="Card image cap ">
+                                <a href="#! ">
+                                    <div class="mask rgba-white-slight "></div>
                                 </a>
                             </div>
 
                             <!-- Card content -->
-                            <div class="card-body card-body-cascade text-center">
+                            <div class="card-body card-body-cascade text-center ">
 
                                 <!-- Title -->
-                                <h4 class="card-title"><strong>Ramadan Mubarak</strong></h4>
-                                <!-- Subtitle -->
+                                <div class="card-body card-body-cascade text-center ">
 
-                                <!-- Text -->
-                                <!--   <p class="card-text">Best Quality</p>
+                                    <!-- Title -->
+                                    <h4 class="card-title "><strong>Diverse and best Quality Gouaches</strong></h4>
+                                    <!-- Subtitle -->
 
-                            <a class="btn btn-unique">View Products</a>  -->
+                                    <!-- Text -->
+                                    <p class="card-text ">Best quality</p>
+
+                                    <a class="btn btn-unique ">View Products</a>
+
+
+
+
+                                </div>
 
 
 
@@ -298,29 +344,32 @@
                     <!-- Card Wider -->
 
                     <!-- Card Narrower -->
-                    <div class="col-lg-4 col-md-12 pb-1 wow fadeIn" style="height: 400px">
+                    <div class="col-lg-4 col-md-12 pb-5 wow fadeIn ">
                         <!-- Card Wider -->
-                        <div class="card card-cascade">
+                        <div class="card card-cascade " style="max-height: 675px;max-width: 675px; ">
 
                             <!-- Card image -->
                             <div class="view view-cascade overlay ">
-                                <img class="card-img-top" src="{% static 'img/s.jpg' %}" alt="Card image cap">
-                                <a href="#!">
-                                    <div class="mask rgba-white-slight"></div>
+                                <img class="card-img-top img-responsive " src="{% static 'img/unnamed.jpg' %} " alt="Card image cap ">
+                                <a href="#! ">
+                                    <div class="mask rgba-white-slight "></div>
                                 </a>
                             </div>
 
                             <!-- Card content -->
-                            <div class="card-body card-body-cascade text-center">
+                            <div class="card-body card-body-cascade text-center ">
 
                                 <!-- Title -->
-                                <h4 class="card-title"><strong>Diverse and best Quality Gouaches</strong></h4>
+
+                                <!-- Title -->
+                                <h4 class="card-title "><strong>Best Quality and Diverse Gouaches</strong></h4>
                                 <!-- Subtitle -->
 
                                 <!-- Text -->
-                                <p class="card-text">Best quality</p>
+                                <p class="card-text ">Best quality</p>
 
-                                <a class="btn btn-unique">View Products</a>
+                                <a class="btn btn-unique ">View Products</a>
+
 
 
 
@@ -332,50 +381,20 @@
                     <!-- Card Narrower -->
 
                     <!-- Card Regular -->
-                    <div class="col-lg-4 col-md-12 pb-1 wow fadeIn">
-                        <!-- Card Wider -->
-                        <div class="card card-cascade">
 
-                            <!-- Card image -->
-                            <div class="view view-cascade overlay">
-                                <img class="card-img-top" src="{% static 'img/s.jpg' %}" alt="Card image cap">
-                                <a href="#!">
-                                    <div class="mask rgba-white-slight"></div>
-                                </a>
-                            </div>
-
-                            <!-- Card content -->
-                            <div class="card-body card-body-cascade text-center">
-
-                                <!-- Title -->
-                                <h4 class="card-title"><strong>Best Quality and Diverse Gouaches</strong></h4>
-                                <!-- Subtitle -->
-
-                                <!-- Text -->
-                                <p class="card-text">Best quality</p>
-
-                                <a class="btn btn-unique">View Products</a>
-
-
-
-
-                            </div>
-
-                        </div>
-                    </div>
                     <!-- Card Regular -->
                 </div>
-                <div class="container" style="margin-top:5%  ; margin-bottom: 5%">
+                <div class="container " style="margin-top:5% ; margin-bottom: 5% ">
                     <!-- Jumbotron -->
-                    <div class="card card-image" style="background-image: url({% static 'img/2.jpg' %});">
-                        <div class="text-white text-center rgba-stylish-strong py-5 px-4">
-                            <div class="py-5">
+                    <div class="card card-image " style="background-image: url({% static 'img/2.jpg' %}); ">
+                        <div class="text-white text-center rgba-stylish-strong py-5 px-4 ">
+                            <div class="py-5 ">
 
                                 <!-- Content -->
-                                <h5 class="h5 orange-text"><i class="fas fa-paint-brush"></i>Pars colour</h5>
-                                <h2 class="card-title h2 my-4 py-2">In Diverse Colours</h2>
-                                <p class="mb-4 pb-2 px-md-5 mx-md-5">Years of experience in manufacturing paint colours</p>
-                                <a class="btn peach-gradient btn-rounded "><i class="fas fa-shopping-basket left"></i> Order our products</a>
+                                <h5 class="h5 orange-text "><i class="fas fa-paint-brush "></i>Pars colour</h5>
+                                <h2 class="card-title h2 my-4 py-2 ">In Diverse Colours</h2>
+                                <p class="mb-4 pb-2 px-md-5 mx-md-5 ">Years of experience in manufacturing paint colours</p>
+                                <a class="btn peach-gradient btn-rounded "><i class="fas fa-shopping-basket left "></i> Order our products</a>
 
                             </div>
                         </div>
@@ -388,74 +407,74 @@
         </div>
     </main>
     <!--Footer-->
-    <footer class="page-footer font-small stylish-color-dark">
+    <footer class="page-footer font-small stylish-color-dark ">
 
         <!-- Footer Links -->
-        <div class="container text-center text-md-left">
+        <div class="container text-center text-md-left ">
 
             <!-- Footer links -->
-            <div class="row text-center text-md-left mt-3 pb-3">
+            <div class="row text-center text-md-left mt-3 pb-3 ">
 
                 <!-- Grid column -->
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Giresh Company </h6>
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
+                    <h6 class="text-uppercase mb-4 font-weight-bold ">Giresh Company </h6>
                     <p>Giresh company started its journey 1990 and with less than 1000$ dollars to produce Paint colours for constuction and related items and importing chemical components of Painting.</p>
                 </div>
                 <!-- Grid column -->
 
-                <hr class="w-100 clearfix d-md-none">
+                <hr class="w-100 clearfix d-md-none ">
 
                 <!-- Grid column -->
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Links group 1</h6>
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 ">
+                    <h6 class="text-uppercase mb-4 font-weight-bold ">Links group 1</h6>
                     <p>
-                        <a href="#!">Link 1</a>
+                        <a href="#! ">Link 1</a>
                     </p>
                     <p>
-                        <a href="#!">Link 2</a>
+                        <a href="#! ">Link 2</a>
                     </p>
                     <p>
-                        <a href="#!">Link 3</a>
+                        <a href="#! ">Link 3</a>
                     </p>
                     <p>
-                        <a href="#!">Link 4 </a>
+                        <a href="#! ">Link 4 </a>
                     </p>
                 </div>
                 <!-- Grid column -->
 
-                <hr class="w-100 clearfix d-md-none">
+                <hr class="w-100 clearfix d-md-none ">
 
                 <!-- Grid column -->
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Useful Links</h6>
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3 ">
+                    <h6 class="text-uppercase mb-4 font-weight-bold ">Useful Links</h6>
                     <p>
-                        <a href="#!">Your Account</a>
+                        <a href="#! ">Your Account</a>
                     </p>
                     <p>
-                        <a href="#!" data-toggle="modal" data-target="#modalContactForm">Contact Support</a>
+                        <a href="#! " data-toggle="modal " data-target="#modalContactForm ">Contact Support</a>
                     </p>
                     <p>
-                        <a href="#!">Usage Rules</a>
+                        <a href="#! ">Usage Rules</a>
                     </p>
                     <p>
-                        <a href="#!">Frequently Asked Questions</a>
+                        <a href="#! ">Frequently Asked Questions</a>
                     </p>
                 </div>
 
                 <!-- Grid column -->
-                <hr class="w-100 clearfix d-md-none">
+                <hr class="w-100 clearfix d-md-none ">
 
                 <!-- Grid column -->
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 ">
+                    <h6 class="text-uppercase mb-4 font-weight-bold ">Contact</h6>
                     <p>
-                        <i class="fas fa-home mr-3"></i>Tehran st ....</p>
+                        <i class="fas fa-home mr-3 "></i>Tehran st ....</p>
                     <p>
-                        <i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
+                        <i class="fas fa-envelope mr-3 "></i> info@gmail.com</p>
                     <p>
-                        <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+                        <i class="fas fa-phone mr-3 "></i> + 01 234 567 88</p>
                     <p>
-                        <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+                        <i class="fas fa-print mr-3 "></i> + 01 234 567 89</p>
                 </div>
                 <!-- Grid column -->
 
@@ -465,14 +484,14 @@
             <hr>
 
             <!-- Grid row -->
-            <div class="row d-flex align-items-center">
+            <div class="row d-flex align-items-center ">
 
                 <!-- Grid column -->
-                <div class="col-md-7 col-lg-8">
+                <div class="col-md-7 col-lg-8 ">
 
                     <!--Copyright-->
-                    <p class="text-center text-md-left">Copyright 2019
-                        <a href="#">
+                    <p class="text-center text-md-left ">Copyright 2019
+                        <a href="# ">
 
                         </a>
                     </p>
@@ -481,11 +500,11 @@
                 <!-- Grid column -->
 
                 <!-- Grid column -->
-                <div class="col-md-5 col-lg-4 ml-lg-0">
+                <div class="col-md-5 col-lg-4 ml-lg-0 ">
 
                     <!-- Social buttons -->
-                    <div class="text-center text-md-right">
-                        <ul class="list-unstyled list-inline">
+                    <div class="text-center text-md-right ">
+                        <ul class="list-unstyled list-inline ">
 
 
 
